<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="@dimen/default_padding"
        android:paddingTop="@dimen/default_padding"
        android:paddingEnd="@dimen/default_padding"
        tools:context=".DialogsLevel1Activity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/alert_dialog_level_2"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/alertCustomDialogButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alert_dialog_custom_view"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/alertCustomSingleChoiceDialogButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alert_dialog_custom_single_choice_view"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/alertCustomInputDialogButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alert_dialog_input_and_validation"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/currentVolumeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:fontFamily="casual"
            android:textSize="16sp"
            android:text="@string/current_volume_50"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

</ScrollView>